--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -10,4 +10,5 @@ jobs:
       - name: my-step
         run: chmod +x ci/build-app.sh && ci/build-app.sh
       - name: Test
-        run: ci/unit-test-app.sh
+        run: chmod +x ci/unit-test-app.sh && ci/unit-test-app.sh
+        
