--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -1,13 +1,23 @@
-name: hello-world
+name: JAVA CI
 on: push
 jobs:
-  my-job:
+  Clone-down:
     runs-on: ubuntu-latest
     container: gradle:6-jdk11
     steps:
       - name: Clone-down
-        uses: actions/checkout@v2
-      - run: chmod +x ci/build-app.sh && ci/build-app.sh
+        uses: actions/checkout@v2  
+      - name: Upload Repo
+        uses: actions/upload-artifact@v2
+  Build:
+    needs: [Clone-down]
+    runs-on: ubuntu-latest
+    container: gradle:6-jdk11
+    steps:
+      - name: Download Repo
+        uses: actions/download-artifact@v2
+      - name: Build
+        run: chmod +x ci/build-app.sh && ci/build-app.sh
       - name: Test
         run: chmod +x ci/unit-test-app.sh && ci/unit-test-app.sh
       - name: Upload Repo
