--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -9,6 +9,9 @@ jobs:
         uses: actions/checkout@v2  
       - name: Upload Repo
         uses: actions/upload-artifact@v2
+        with: 
+          name: Repo
+          path: .
   Build:
     needs: [Clone-down]
     runs-on: ubuntu-latest
