--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -17,10 +17,9 @@ jobs:
     runs-on: ubuntu-latest
     container: gradle:6-jdk11
     steps:
-      - name: Download Repo
-        uses: actions/download-artifact@v2
       - name: Build
-        run: chmod +x ci/build-app.sh && ci/build-app.sh
+        uses: actions/download-artifact@v2
+      - run: chmod +x ci/build-app.sh && ci/build-app.sh
       - name: Test
         run: chmod +x ci/unit-test-app.sh && ci/unit-test-app.sh
       - name: Upload Repo
