--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -13,12 +13,15 @@ jobs:
           name: Repo
           path: .
   Build:
-    needs: Clone-down
     runs-on: ubuntu-latest
+    needs: Clone-down
     container: gradle:6-jdk11
     steps:
       - name: Build
         uses: actions/download-artifact@v2
+        with:
+          name: Repo
+          path: .
       - run: chmod +x ci/build-app.sh && ci/build-app.sh
       - name: Test
         run: chmod +x ci/unit-test-app.sh && ci/unit-test-app.sh
